fix: use max-height to replace height for better vertical-align

--- a/src/components/Charts/Pie/index.less
+++ b/src/components/Charts/Pie/index.less
@@ -61,7 +61,7 @@
     left: 50%;
     top: 50%;
     text-align: center;
-    height: 62px;
+    max-height: 62px;
     transform: translate(-50%, -50%);
     & > h4 {
       color: @text-color-secondary;
